--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,12 @@
       <% flash.each do |message_type, message| %>
         <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
       <% end %>
+      
       <%= yield %>
       <%= render 'layouts/footer' %>
+      
       <%= debug(params) if Rails.env.development? %>
+      <%= session[:user_id].nil? ? "にる" : "データある" %> 
     </div>
   </body>
 </html>
